--- a/artiste.css
+++ b/artiste.css
@@ -1,3 +1,34 @@
+button.listeArtistes{
+    display: block;
+    position: sticky;
+    top:40px;
+    right:0px;
+    background-color: #c2ddf7;
+    text-align: center;
+    width: 134px;
+    height: 40px;
+    z-index: 2;
+}
+
+aside{
+    display: none;
+    position: sticky;
+    top:80px;
+    z-index: 1;
+    width: 130px;
+    border: 2px solid black;
+}
+
+aside a{
+    display: flex;
+    flex-direction: column;
+    background-color: #80b7e9;
+       /* width: 160px; */
+}
+aside a:hover{
+    background-color: #3e668b;
+   }
+
 p {
     text-align: justify;
 }
