--- a/partenaires.css
+++ b/partenaires.css
@@ -1,7 +1,6 @@
 #partenaires {
     color: rgb(14, 29, 243);
     text-shadow: 10px;
-
 }
 
 main img {
@@ -9,21 +8,17 @@ main img {
     border-radius: 10px;
 }
 
-.partenaires {
+.partenaires, .partenaires-nurserie {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
     margin: 30px 0;
     padding: 20px;
     gap: 20px;
+    transition: 4s;
 }
-.partenaire-humour{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
+
 main {
     margin-bottom: 30px;
 }
